# agent-360-backend

./: .dockerignore  .env.example  .gitignore  API_RESPONSE_SYSTEM_SUMMARY.md  Agent360_API_CHECKS.sql  Agent360_BULK_LOAD.sql  Agent360_DDL.sql  Agent360_MOCK_DATA.sql  Dockerfile  IMPLEMENTATION_SUMMARY.md  MODELS_REFERENCE.md  QUICKSTART.md  README.md  create_product_perfomance.md  cursor_prompt_agent360_django_models.md  entrypoint.sh  main.py  pyproject.toml  sales-order-drilldown-apis.md
apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
apps/agreements/: admin.py  apps.py  models.py
apps/ai_assistant/: __init__.py  admin.py  models.py
apps/analytics/: README.md  USAGE_GUIDE.md  selectors.py  services.py  tests.py  views.py
apps/campaigns/: admin.py  models.py  serializers.py  urls.py  views.py
apps/cases/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/forecasts/: admin.py  apps.py  models.py
apps/invoices/: admin.py  apps.py  models.py
apps/products/: admin.py  analytics_serializers.py  analytics_services.py  models.py  (+6 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: db.py
docs/: ACCOUNTS_API.md  ALB_AUTHENTICATION.md  ALL_APIS_COMPREHENSIVE_DOCUMENTATION.md  CAMPAIGNS_API.md  CODE_STANDARDS.md  COMPLAINTS_CASES_API.md  DATABASE_SCHEMA.md  DEVELOPMENT_WORKFLOW.md  ERROR_MESSAGES_CONSTANTS.md  ORDERS_API.md  PRODUCT_PERFORMANCE_API.md  PRODUCT_PERFORMANCE_QUARTERLY_API.md  PRODUCT_RFC_BY_MONTH_API.md  PRODUCT_UPDATE_RFC_API.md  PROJECT_STRUCTURE.md  README.md  SALES_ANALYTICS_API.md  USERS_API.md
(+71 files in other folders)
